--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -5,3 +5,6 @@
 @import "foundation";
 @include foundation-everything;
 // Components
+@import "components/container";
+@import "components/page-title";
+@import "components/todo";
